# internship-2026

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  conversation.py  line.py  llm.py  main.py  rag.py  schemas.py
