[project]
name = "internship-2026"
version = "0.1.0"
description = "FastAPI LINE RAG chatbot for the internship technical test"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "line-bot-sdk>=3.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
